--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     
     <h2>Our responsibilities as a team:</h2>
     <ul>
-        <li>Developing C# .NET solutions for  organizations at affordable price.</li>
+        <li>Developing C# .NET solutions for personal use & business needs.</li>
         <li>Creating internal applications using the .NET framework for the team.</li>
         <li>Debugging and maintaining written code.</li>
         <li>Defining and organizing ongoing projects.</li>
         <li>Resolving issues related to .NET projects and releasing updates.</li>
         <li>Working in a project team alongside other developers.</li>
-        <li>Providing technical support to users our applications.</li>
+        <li>Providing technical support to users of our applications.</li>
         <li>Participating in seminars and training sessions. </li>
       </ul>
       
