--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   </div>
   <div class="main">
     <h2 id="demo">Welcome to AA-Trustech team</h2>
-    
+    <img src="Images\bio.png" alt="Aminu Awwal" width="128" height="128">
+    <br>
     <h4>AA-Trustech is a small team of web, mobile and desktop developers specialized in creating simple and easy to use applications to handle your day-to-day activities.</h4>
     
     <p>You will find our software in Microsoft Store, Play Store and Apple Store. The founder Aminu Awwal is a coding ethusiast.</p>
