--- a/Download.html
+++ b/Download.html
@@ -28,7 +28,7 @@
     <h2>DOWNLOAD CENTER</h2>
     <h5>Free Windows Desktop Applications:</h5>
     <ul>
-      <li><a href="Key-PPG Generator\1.0.1\setup.exe" title="Versioned URL for Key-PPG Generator installer package">Key-PPG Generator</a></li>
+      <li><a href="KeyPPGenerator\1.0.1\Setup.exe" title="Versioned URL for Key-PPG Generator installer package">Key-PPG Generator</a></li>
       <li><a href="Download.html" title="Versioned URL for Trust Calculator installer package">Trust Calculator</a></li>
       <li><a href="Download.html" title="Versioned URL for Field Service App installer package">Field Service App</a></li>
     </ul>
