--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         </ul>
     
     <br>
+    <h2>My Social Platforms:</h2>
+    <br>
       <a href="https://www.facebook.com/esminu007" class="fa fa-facebook"></a>  
       <a href="https://www.linkedin.com/in/mr-trust-211775222/" class="fa fa-linkedin"></a>  
       <a href="https://www.instagram.com/ameenutrust/" class="fa fa-instagram"></a>  
