--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="navbar">
   <a href="index.html">Home</a>
   <a href="Download.html">Download</a>
-  <a href="Privacy Policy.html">Privacy Policy</a>
+  <a href="Privacy-Policy.html">Privacy Policy</a>
   <a href="#" class="right">Contact Us</a>
 </div>
 
