--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -19,7 +19,7 @@
 <div class="navbar">
   <a href="index.html">Home</a>
   <a href="Download.html">Download</a>
-  <a href="Privacy Policy.html">Privacy Policy</a>
+  <a href="Privacy-Policy.html">Privacy Policy</a>
   <a href="#" class="right">Contact Us</a>
 </div>
 
