--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>I am specifically a C# developer. I build applications and programs using the .NET framework for use on Windows operating systems.</p>
     <p>I write code, develop and design user interfaces as well as debug and maintain code for clients under my business or company name AA-Trustech. </p>
     <p>I am currently on the path to becoming a full-stack developer.</p>
-    <p>I am always on the look out for young coding enthusiasts like me to collaborate with. If you want us to work together, here is my <a href="https://github.com/TrustAminu">GitHuB profile</a>, let's team up!</p>
+    <p>I am always on the look out for young coding enthusiasts like me to collaborate with. If you want us to collaborate on a project, you can find me on GitHuB.</p>
     <br>
     <h2>My responsibilities as AA-Trustech:</h2>
     <ul>
