--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 <div class="header">
-  <img src="Images\aa_logo.png" alt="AA-Trustech Icon" width="128" height="128">
+  <img src="Images\aa_logo.png" alt="AA-Trustech Icon" width="195" height="249">
   <h1>AA-TRUSTECH</h1>
-  <p><i>Trusted IT Services and Solution Center</i></p>  
+  <p><i>Trusted IT Services and Solution Planet</i></p>  
 </div>
 
 <div class="navbar">
@@ -33,11 +33,11 @@
     <br>
     <h4>AA-Trustech is my private software development company. It is a personal business name I use for my web, mobile and desktop application development. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</h4>
     
-    <p>You will find my software in Microsoft Store, Play Store and Apple Store. I am a coding ethusiast. Coding is my hobby.</p>
+    <p>You will find my software in Microsoft Store. Coming soon on PlayStore and Apple Store. I am a coding ethusiast. Coding is my hobby.</p>
     <p>I am specifically a C# developer. I build applications and programs using the .NET framework for use on Windows operating systems.</p>
     <p>I write code, develop and design user interfaces as well as debug and maintain code for clients under my business or company name AA-Trustech. </p>
     <p>I am currently on the path to becoming a full-stack developer.</p>
-    <p>I am always on the look out for young coding enthusiasts like me to collaborate with. If you want us to collaborate on a project, you can find me on GitHuB.</p>
+    <p>I am always on the look out for coding enthusiasts like me to collaborate with and also learn from. If you want us to collaborate on a project, you can find me on GitHuB.</p>
     <br>
     <h2>My responsibilities as AA-Trustech:</h2>
     <ul>
