--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -13,7 +13,7 @@
 <div class="header">
   <img src="Images\aa_logo.png" alt="AA-Trustech Icon" width="128" height="128">
   <h1>AA-TRUSTECH</h1>
-  <p>Trusted IT Services and Solution Center.</p>
+  <p><i>Trusted IT Services and Solution Planet</i></p> 
 </div>
 
 <div class="navbar">
