--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <h2 id="demo">Welcome, I am Aminu Awwal a.k.a Mr. Trust</h2>
     <img src="Images\bio.JPG" alt="Aminu Awwal" width="195" height="249">
     <br>
-    <h4>AA-Trustech is my private software development company. It is a personal business name I use for my web, mobile and desktop application development. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</h4>
+    <h4>AA-Trustech is my private online software development tech name. It is a private business/company name I use for my web, mobile and desktop application development. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</h4>
     
-    <p>You will find my software in Microsoft Store. Coming soon on PlayStore and Apple Store. I am a coding ethusiast. Coding is my hobby.</p>
+    <p>You will find my software mostly in Microsoft Store. I will son be launching my apps on PlayStore and Apple Store as well. Watch out for it! I am a coding ethusiast. Coding is my hobby.</p>
     <p>I am specifically a C# developer. I build applications and programs using the .NET framework for use on Windows operating systems.</p>
     <p>I write code, develop and design user interfaces as well as debug and maintain code for clients under my business or company name AA-Trustech. </p>
     <p>I am currently on the path to becoming a full-stack developer.</p>
@@ -49,8 +49,7 @@
         <li>Providing technical support to users of our applications.</li>
         <li>Keep building up my skills via training courses.</li>
       </ul>
-      <br>
-    
+      <br>    
      <h2>My Technical Skills:</h2>
     <ul>
         <li>Programming Languages: C#, Java, Python, Kotlin.</li>
