--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -40,7 +40,7 @@
 
     <p>We are committed and dedicated in promptly correcting bugs, errors, security vulnerabilities, or other defects found in our software. Since a thorough testing phase is always performed on several devices before release, you are responsible or liable for any loss of data or device damage.</p>
 
-    <p>If we plan to collect any sort of personal data from you, we will make it very clear in from the onset in our software. This will allow you opportunity to either accept or decline. In most cases, declining may mean that you completely uninstall our application immediately from your system</p>
+    <p>If we plan to collect any sort of personal data from you, we will make it very clear from the onset in our software. This will allow you opportunity to either accept or decline. In most cases, declining may mean that you completely uninstall our application immediately from your system</p>
       
     <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us. We will continue to be transparent in our information & communications with you our dear esteem user. </p>
       
