--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -26,6 +26,28 @@
 
   <div class="main">
     
+    <h2>Privacy Policy</h2>  
+  <p> <b>We don't collect any "personal data"</b></p>
+  <p> For now, we don't collect any personal data. If information/data is not collected or retrieved, it cannot be demanded, stolen, leaked or abused. Protecting your personal data is the best way to safeguard your online privacy.</p>
+  <p> <b> How we define "personal data"</b></p>
+  <p> Personally identifiable information (PII) is any information related to an identifiable person such as information relating to Name, Personal identification numbers, Personal address information, Personal telephone numbers, Personal characteristics, Biometric data, Information identifying personally owned property, Asset information,.</p>
+
+<p> <b> Information we don’t collect</b></p>
+<p>So let’s be transparent here:</P>
+<ul>
+<li>We don’t record your IP address</li>
+<li>We don’t serve any tracking or identifying cookies</li>
+<li>We don’t have a form on this website to collect information</li>
+<li>We don't have a search feature that records queries</li>
+</ul>
+<p> <b> Did you implement an anonymous analytics?</b></p>
+Our static website is hosted from a private GitHuB repository. Thus, we are not aware of any anonymous analytics process running on this site. We are not aware if they measure overall traffic numbers and some other – strictly anonymous – statistics. By using this site, you voluntarily agree to subject to any collection of data for statistic purposes.
+<p> <b> We don't disclose or sell your contact information</b></p>
+<p> When you contact us via email for support, we’ll use the contact information provided to respond to you. We don't disclose or sell your contact information. 
+<p> Our company and contact information</b></p>
+<p> Still have privacy questions? </b></p>
+<p> AA-Trustech is owned and operated by Aminu Awwal, Edo State, Nigeria. You can contact the owner of this site at aminuawwal2011@gmail.com</p>
+<br>
     <h4>Please carefully read below our Privacy Policy & Terms of Use of all my Software:</h4>
     <ul>
     <li><a href="KeyPPGenerator.html" title="Privacy Policy & Terms of Use of Key-PPG Generator">Key-PPG Generator</a></li>
