--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -44,8 +44,8 @@
 Our static website is hosted from a private GitHuB repository. Thus, we are not aware of any anonymous statistical analytics process running behind the scene on this site. Thus, by using this site, you voluntarily agree to subject yourself to whatever collection of data for statistical purposes only.
 <p> <b> We don't disclose or sell your contact information</b></p>
 <p> When you contact us via email for support, we’ll use the contact information provided to respond to you. We don't disclose or sell your contact information. 
-<p> Our company and contact information</b></p>
-<p> Still have privacy questions? </b></p>
+<p><b>Our company and contact information</b></p>
+<p><b>Still have privacy questions?</b></p>
 <p> AA-Trustech is owned and operated by Aminu Awwal, Edo State, Nigeria. You can contact the owner of this site at aminuawwal2011@gmail.com</p>
 <br>
     <h4>Please carefully read below our Privacy Policy & Terms of Use of all my Software:</h4>
