--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
     <h2 id="demo">Welcome, I am Aminu Awwal a.k.a Mr. Trust</h2>
     <img src="Images\bio.JPG" alt="Aminu Awwal" width="195" height="249">
     <br>
-    <h4>AA-Trustech is my private online software development tech name. It is a private business/company name I use for my web, mobile and desktop application development. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</h4>
+    <h4>AA-Trustech is my private online software development tech name. It is also my online presence I use for my web, mobile and desktop application development. Hopefully, someday it will be my private business/company name. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</h4>
     
-    <p>You will find my software mostly in Microsoft Store. I will soon be launching my apps on PlayStore and Apple Store as well. Watch out for it! I am a coding ethusiast. Coding is my hobby.</p>
+    <p>You will find my software mostly in Microsoft Store. I will soon be launching my apps on PlayStore and Apple Store as well. Watch out for it!</p> 
     <p>I am specifically a C# developer. I build applications and programs using the .NET framework for use on Windows operating systems.</p>
     <p>I write code, develop and design user interfaces as well as debug and maintain code for clients under my business or company name AA-Trustech. </p>
     <p>I am currently on the path to becoming a full-stack developer.</p>
     <p>I am always on the look out for coding enthusiasts like me to collaborate with and also learn from. If you want us to collaborate on a project, you can find me on GitHuB.</p>
+    <p>I am a coding ethusiast. Coding is my hobby.</p>
     <br>
     <h2>My responsibilities as AA-Trustech:</h2>
     <ul>
