--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2 id="demo">Welcome, I am Aminu Awwal a.k.a Mr. Trust</h2>
     <img src="Images\bio.JPG" alt="Aminu Awwal" width="195" height="249">
     <br>
-    <h4>AA-Trustech is my private online software development tech name. It is also my online presence I use for my web, mobile and desktop application development. Hopefully, someday it will be my private business/company name. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</h4>
+    <p><b>AA-Trustech</b> is my private online software development tech name. It is also my online presence I use for my web, mobile and desktop application development. Hopefully, someday it will be my private business/company name. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</p>
     
     <p>You will find my software mostly in Microsoft Store. I will soon be launching my apps on PlayStore and Apple Store as well. Watch out for it!</p> 
     <p>I am specifically a C# developer. I build applications and programs using the .NET framework for use on Windows operating systems.</p>
