--- a/Download.html
+++ b/Download.html
@@ -62,7 +62,7 @@
             <br>
 
             <p><b>AvoidWhatIsBad Game</b></p>
-        <p>This game is still in it early development stage. It is a simple game that where a user is expected to avoid blocks of bad things.</p>
+        <p>This game is still in it early development stage. In this game, the player is expected to avoid blocks of bad things by moving left or right. It is a Bible-based game for all ages.</p>
           
             <img src="Images\img4.PNG" alt="Slide 4 app"  width="500" height="300" />
             <br>
