--- a/Download.html
+++ b/Download.html
@@ -55,7 +55,7 @@
             <br>
 
         <p><b>Field Service Report</b></p>
-        <p>This dekstop application is still in it early development stage. It is designed for members of JW who preach and teach the Bible and wish to have an app to report thier activities.</p>
+        <p>This desktop application is still in it early development stage. It is designed for members of JW who preach and teach the Bible and wish to have an app to report thier activities.</p>
           
             <img src="Images\img3.jpg" alt="Slide 3 app"  width="500" height="300" />
             <br>
