--- a/Download.html
+++ b/Download.html
@@ -74,7 +74,7 @@
       </div>
     
       <br>
-      <a href="https://apps.microsoft.com/store/apps">Rate Us</a>
+      <a href="https://apps.microsoft.com/store/search?publisher=AA-Trustech">Rate Us</a>
     </br>
     </div>
 </div>
