--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
   </div>
   <div class="main">
-    <h2 id="demo" >Hello & welcome, I am Aminu Awwal a.k.a Mr. Trust</h2>
+    <h2 id="demo" >Hello & welcome to my techsite, I am technically known as Mr. Trust</h2>
     <img src="Images\bio.JPG" alt="Aminu Awwal" width="195" height="249">
     <br>
     <p><b>AA-Trustech</b> is my private online software development tech name. It is also my online presence I use for my web, mobile and desktop application development. I am specialized in creating simple and easy to use applications to handle day-to-day activities.</p>
