--- a/Download.html
+++ b/Download.html
@@ -29,6 +29,7 @@
     <h5>Free Windows Desktop Applications:</h5>
     <ul>
       <li><a href="KeyPPGenerator\1.0.2\Setup1.msi" title="Versioned URL for Key-PPG Generator installer package">Key-PPG Generator (Released)</a></li>
+      <li><a href="ColoReader\1.1.0\Setup1.msi" title="Versioned URL for ColoReader installer package">ColoReader (To be released soon)</a></li>
       <li><a href="Download.html" title="Versioned URL for Trust Calculator installer package">Trust Calculator (Not released yet)</a></li>
       <li><a href="Download.html" title="Versioned URL for WaZoBia Word Translator installer package">WaZoBia Word Translator (Not released yet)</a></li>
       <li><a href="Download.html" title="Versioned URL for Field Service Report App installer package">Field Service Report App (Not released yet)</a></li>   
