--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -52,7 +52,7 @@ Our static website is hosted from a private GitHuB repository. Thus, we are not 
     <ul>
     <li><a href="KeyPPGenerator.html" title="Privacy Policy & Terms of Use of Key-PPG Generator">Key-PPG Generator</a></li>
     
-    <li><a href="#" title="Privacy Policy & Terms of Use of ...">Coming soon...</a></li>
+    <li><a href="ColoReader" title="Privacy Policy & Terms of Use of ColoReader...">ColoReader</a></li>
 
     <br>
     
@@ -65,7 +65,7 @@ Our static website is hosted from a private GitHuB repository. Thus, we are not 
 </div>
 
 <div class="footer">
-  <h2>2022 AA-Trustech</h2>
+  <h2>2023 AA-Trustech</h2>
 </div>
 
 </body>
