--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -46,7 +46,7 @@ Our static website is hosted from a private GitHuB repository. Thus, we are not 
 <p> When you contact us via email for support, we’ll use the contact information provided to respond to you. We don't disclose or sell your contact information. 
 <p><b>Our company and contact information</b></p>
 <p><b>Still have privacy questions?</b></p>
-<p> AA-Trustech is owned and operated by Aminu Awwal, Edo State, Nigeria. You can contact the owner of this site at aminuawwal2011@gmail.com</p>
+<p> AA-Trustech is owned and operated by Aminu Awwal from Nigeria, West Africa. You can contact the owner of this site via email at aminuawwal2011@gmail.com or esminu007g.farm@yahoo.com</p>
 <br>
     <h4>Please carefully read below our Privacy Policy & Terms of Use of all my Software:</h4>
     <ul>
