--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -52,7 +52,7 @@ Our static website is hosted from a private GitHuB repository. Thus, we are not 
     <ul>
     <li><a href="KeyPPGenerator.html" title="Privacy Policy & Terms of Use of Key-PPG Generator">Key-PPG Generator</a></li>
     
-    <li><a href="ColoReader" title="Privacy Policy & Terms of Use of ColoReader...">ColoReader</a></li>
+    <li><a href="ColoReader.html" title="Privacy Policy & Terms of Use of ColoReader">ColoReader</a></li>
 
     <br>
     
