--- a/Download.html
+++ b/Download.html
@@ -49,6 +49,12 @@
             <br>
             <br>
 
+        <p><b>ColoReader</b></p>
+        <p>This is the second application to be published in Microsoft Store in the year April 2023. ColoReader is a simple image processing desktop application capable of extracting image details, converting and saving image to popular image file extensions like .png, .jpg, .bmp etc.</p>
+            <img src="Images\img5.png" alt="Slide 1 app" width="500" height="300" />
+            <br>
+            <br>
+        
         <p><b>WaZoBia Word Translator </b></p>
         <p>This application is still in development stage. It is a software designed to translate from English to Yoruba, Hausa and Igbo language simultaneously. The main audience of this app is West Africa countries.</p>
             <img src="Images\img2.jpg" alt="Slide 2 app" width="500" height="300" />
