--- a/Download.html
+++ b/Download.html
@@ -50,7 +50,7 @@
             <br>
 
         <p><b>ColoReader</b></p>
-        <p>This is the second application to be published in Microsoft Store in the year April 2023. ColoReader is a simple image processing desktop application capable of extracting image details, converting and saving image to popular image file extensions like .png, .jpg, .bmp etc.</p>
+        <p>This is the second application to be published in Microsoft Store in the year 2023 April. ColoReader is a simple image processing desktop application capable of extracting image details, converting and saving image to popular image file extensions like .png, .jpg, .bmp etc.</p>
             <img src="Images\img5.png" alt="Slide 1 app" width="500" height="300" />
             <br>
             <br>
